src/main/docker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-docker-service
  labels:
    app: test-docker-service
spec:
  selector:
    app: test-docker
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: test-docker-service
