src/main/docker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-docker-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "nginx"
  rules:
    - host: myservice.com
      http:
        paths:
          - path: /basic(/|$)(.*)
            #pathType: Prefix
            pathType: ImplementationSpecific
            backend:
              service:
                name: test-docker-service
                port:
                  number: 8080
